// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ButtonFilters - Snapshots > matches snapshot for button element 1`] = `
<button
  class="hidden bg-secondary px-4 py-3 shadow-xl hover:bg-secondary/90 lg:inline-flex rounded-l-none rounded-r-full"
  data-cy="button-filters-left"
  data-size="icon"
  data-variant="secondary"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-settings2 lucide-settings-2 h-6 w-6"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M14 17H5"
    />
    <path
      d="M19 7h-9"
    />
    <circle
      cx="17"
      cy="17"
      r="3"
    />
    <circle
      cx="7"
      cy="7"
      r="3"
    />
  </svg>
</button>
`;

exports[`ButtonFilters - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="fixed top-[150px] z-10 left-0"
>
  <button
    class="hidden bg-secondary px-4 py-3 shadow-xl hover:bg-secondary/90 lg:inline-flex rounded-l-none rounded-r-full custom-filters"
    data-cy="button-filters-left"
    data-size="icon"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-settings2 lucide-settings-2 h-6 w-6"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 17H5"
      />
      <path
        d="M19 7h-9"
      />
      <circle
        cx="17"
        cy="17"
        r="3"
      />
      <circle
        cx="7"
        cy="7"
        r="3"
      />
    </svg>
  </button>
</div>
`;

exports[`ButtonFilters - Snapshots > matches snapshot with default props 1`] = `
<div
  class="fixed top-[150px] z-10 left-0"
>
  <button
    class="hidden bg-secondary px-4 py-3 shadow-xl hover:bg-secondary/90 lg:inline-flex rounded-l-none rounded-r-full"
    data-cy="button-filters-left"
    data-size="icon"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-settings2 lucide-settings-2 h-6 w-6"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 17H5"
      />
      <path
        d="M19 7h-9"
      />
      <circle
        cx="17"
        cy="17"
        r="3"
      />
      <circle
        cx="7"
        cy="7"
        r="3"
      />
    </svg>
  </button>
</div>
`;

exports[`ButtonFilters - Snapshots > matches snapshot with left position 1`] = `
<div
  class="fixed top-[150px] z-10 left-0"
>
  <button
    class="hidden bg-secondary px-4 py-3 shadow-xl hover:bg-secondary/90 lg:inline-flex rounded-l-none rounded-r-full"
    data-cy="button-filters-left"
    data-size="icon"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-settings2 lucide-settings-2 h-6 w-6"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M14 17H5"
      />
      <path
        d="M19 7h-9"
      />
      <circle
        cx="17"
        cy="17"
        r="3"
      />
      <circle
        cx="7"
        cy="7"
        r="3"
      />
    </svg>
  </button>
</div>
`;

exports[`ButtonFilters - Snapshots > matches snapshot with right position 1`] = `
<div
  class="fixed top-[150px] z-10 right-0"
>
  <button
    class="hidden bg-secondary px-4 py-3 shadow-xl hover:bg-secondary/90 lg:inline-flex rounded-r-none rounded-l-full"
    data-cy="button-filters-right"
    data-size="icon"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-lightbulb h-6 w-6"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
      />
      <path
        d="M9 18h6"
      />
      <path
        d="M10 22h4"
      />
    </svg>
  </button>
</div>
`;
